--- a/style.css
+++ b/style.css
@@ -154,6 +154,13 @@ body {
   text-align: center;
 }
 
+.project-image img {
+  text-align: center;
+  max-width: 100%;
+  border: solid 1px rgba(192, 192, 192, 0.609) ;
+  border-radius: 5px;
+}
+
 .projects p {
   margin: 0 0 24px;
 }
@@ -164,9 +171,17 @@ body {
   vertical-align: baseline;
   text-decoration: none;
   text-transform: uppercase;
-  border-radius: 4px;
+  border: #00417d solid 1px;
+  border-radius: 10px;
   background-color: #288be6;
   color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.button:hover{
+  color: #04396b;
+  background-color: #86c3fa;
+  box-shadow: 2px 11px 20px rgba(20, 20, 21, 0.287);
 }
 
 .page-footer {
